﻿=========================================================
xx.xx.2011 - Version 1.11
=========================================================
Fixed:
- replaced Google Pagerank function
- typos in captcha causing submit form not to work in frontend

Added:
- links can be set online/offline by clicking icon in index
- submitted links indicaed with hourglass icon in Status column
- updated flag of Georgia

=========================================================
20.09.2011 - Version 1.10
=========================================================
Fixed:
- replaced Multimap with Bing Maps
- alphabetical listing using toolbar
- submit form not working in frontend
- total links for sub-cats in imLinks index page

Removed:
- support for DHTML editor and bbcode
- Simpy and Spurl from social bookmarks
- link to Submit a Bug in About page

Removed files:
- xoops_version.php
- images/icon/multimap.png
- images/sbookmarks/simpy.png
- images/sbookmarks/spurl.png
- include/config.php

Updated:
- imLinks for ImpressCMS 1.3
- Google and Yahoo map icons
- Countries (../language/{language}/countries.php)

=========================================================
21.10.2010 - Version 1.04 Final
=========================================================
- Fixed: brokenlink-report is not deleted when link is deleted
- Fixed: when deleting a broken link, the alt-cats and comments are not deleted

=========================================================
30.09.2010 - Version 1.04 RC-2
=========================================================
- Fixed: meta-tags not working
- Fixed: filtering special characters for Nice URLS

=========================================================
21.09.2010 - Version 1.04 RC-1
=========================================================
- Updated: country flag icons

- Fixed: submit form not working when disclaimer is active
- Fixed: RSS feed now passes validation
- Fixed: tag plugin

=========================================================